src_old/objects/ProjectLocation__c.object
<CustomObject>
    <description>Project Location relates a Location to a Project. Project Location is related Project, Job, and Location.</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Location__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowTeamManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Team Management in OneHub Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingStatus__c</fullName>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                    <default>true</default>
                    <label>Billable</label>
                </value>
                <value>
                    <fullName>NotBillable</fullName>
                    <label>Not Billable</label>
                </value>
                <value>
                    <fullName>NeedsReview</fullName>
                    <label>Needs Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier Requested</fullName>
                </value>
                <value>
                    <fullName>Retailer Requested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Location__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionStatus__c</fullName>
        <label>Completion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Location__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateReported__c</fullName>
        <label>Date Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <description>The store end time</description>
        <label>End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutedDate__c</fullName>
        <label>REMOVE Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecutionCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasBillingIssues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Billing Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelpTimeMinutesCalculated__c</fullName>
        <label>HelpTime Minutes Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HelpTimeMinutesOverride__c</fullName>
        <label>HelpTime Minutes Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HelpTimeMinutes__c</fullName>
        <formula>IF (ISBLANK(HelpTimeMinutesOverride__c),HelpTimeMinutesCalculated__c,HelpTimeMinutesOverride__c)</formula>
        <label>HelpTime Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNewLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a if the project location i added in scheduled state</description>
        <label>is New Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobExceptions__c</fullName>
        <label>Job Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeepAssignmentOverride__c</fullName>
        <label>Keep Assignment Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeepAssignment__c</fullName>
        <formula>IF (OR(ISPICKVAL( KeepAssignmentOverride__c, &apos;No Override&apos;),ISBLANK(TEXT(KeepAssignmentOverride__c))), Project__r.KeepAssignment__c, IF (ISPICKVAL(KeepAssignmentOverride__c, &apos;Yes&apos;),TRUE,FALSE) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keep Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationExecutedDate__c</fullName>
        <label>Location Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationNumber__c</fullName>
        <formula>Location__r.LocationNumber__c</formula>
        <label>Location #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationScheduledDate__c</fullName>
        <label>Location Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>ProjectLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoofActiveJobsStartedOntime__c</fullName>
        <label>No of Active Jobs Started Ontime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofImages__c</fullName>
        <label>Number of Images</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneHubLocationId__c</fullName>
        <formula>Location__r.OneHubLocationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OneHub Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <label>OneHub Retailer Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneHubThirdPartyAgencyContactId__c</fullName>
        <label>3PL Agency ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <formula>Location__r.PostalCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTypeName__c</fullName>
        <formula>Project__r.ProjectTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <formula>Project__r.ProjectType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>ProjectLocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReservationLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation Location</label>
        <referenceTo>ReservationLocation__c</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RetailerName__c</fullName>
        <formula>Project__r.ProjectRetailerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <formula>Project__r.Retailer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Location__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusComments__c</fullName>
        <label>Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Job Created</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyPhotoViewerEncodedId__c</fullName>
        <label>Survey Photo Viewer Encoded Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyPhotoViewerUrl__c</fullName>
        <formula>$Setup.SurveyPhotoViewerSetting__c.Url__c + &apos;?recid=&apos; +  SurveyPhotoViewerEncodedId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Photo Viewer Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3PL Agency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdPartySpecialRequest__c</fullName>
        <label>3PL Special Request</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalEstimatedMinutes__c</fullName>
        <label>Total Estimated Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNumberofExecutedJobs__c</fullName>
        <label>Total Number of Executed Jobs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNumberofJobs__c</fullName>
        <label>Total Number of Jobs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalReportedMinutes__c</fullName>
        <label>Total Time Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(Location__r.Parent__c != null, Location__r.Parent__r.Name, &apos;&apos;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Project Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_past_schedule_dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( LocationScheduledDate__c),LocationScheduledDate__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Cannot schedule a location to a date that is in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_End_Time</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(EndTime__c),
REGEX(EndTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
        <errorMessage>Invalid End Time. Please follow this format HH:MM AMPM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Schedule_Date</fullName>
        <active>true</active>
        <description>Schedule date should be within the project window</description>
        <errorConditionFormula>AND( UPPER(Project__r.ProjectScheduleOptionCode__c) == &apos;USER&apos;,NOT(ISBLANK(LocationScheduledDate__c)), OR( Project__r.EndDate__c - LocationScheduledDate__c &lt; (Project__r.NumberOfDays__c - 1), Project__r.EndDate__c &lt; LocationScheduledDate__c, Project__r.StartDate__c &gt; LocationScheduledDate__c))</errorConditionFormula>
        <errorMessage>Schedule date should be within the project window.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Start_Time</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(StartTime__c),
REGEX(StartTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
        <errorMessage>Invalid Start Time. Please follow this format HH:MM AMPM</errorMessage>
    </validationRules>
</CustomObject>